fix: image shadow overflow issue

--- a/apps/theme/pageBuilder/styles/elements/image.scss
+++ b/apps/theme/pageBuilder/styles/elements/image.scss
@@ -9,7 +9,6 @@ img {
 }
 
 .webiny-pb-page-element-image {
-  overflow: hidden;
   box-sizing: border-box;
   box-shadow: none !important;
   //display: flex; removed because of testimonial #2
